src/test/resources/invalid/Invariant.sc
/* (c) https://github.com/MontiCore/monticore */
statechart Invariant {
  state Foo [a];
}